# Thesis

./: main.cpp
persoonsdetectie/: CMakeLists.txt  package.xml
persoonsdetectie/launch/: aruco_mapping_all.launch
persoonsdetectie/src/: main.cpp
publisher/: CMakeLists.txt  package.xml
publisher/src/: main.cpp
